# ipyfernel

./: README.md  pyproject.toml  settings.ini  setup.py
.github/workflows/: deploy.yaml
ipyfernel/: _modidx.py  core.py
nbs/: 00_core.ipynb  01_demo.ipynb  _quarto.yml  index.ipynb  styles.css
