[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ipyfernel"
dynamic = ["version"]
description = "Remote execution of solveit/jupyter cells"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Scott H. Hawley", email = "scott.hawley@belmont.edu"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "jupyter-client>=8.7.0",
 'ipython',
 'sshpyk',
]

[project.urls]
Repository = "https://github.com/drscotthawley/ipyfernel"
Documentation = "https://drscotthawley.github.io/ipyfernel"

[project.entry-points.nbdev]
ipyfernel = "ipyfernel._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "ipyfernel.__version__"}

[tool.setuptools.packages.find]
include = ["ipyfernel"]

[tool.nbdev]
